--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-starter-kit",
   "homepage": "./",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-brands-svg-icons": "^6.4.2",
