--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-starter-kit",
-  "homepage": "./",
+  "homepage": "https://aidablaya.github.io/portfolio-AidaBlaya/",
   "version": "0.1.0",
   "private": false,
   "dependencies": {
